// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ToastOverlayView actions keeps a wrapped prompt and notice in disjoint structural regions through resize 1`] = `
"  │ needs attention        [copy][x] │
FL│ Worktrunk failed to remove the   │
──│ selected checkout because the    │─
  │ main worktree cannot be removed  │
 ▼│ while Station is running there.  │]
 [│ Open a different linked          │
▼ │ checkout, select the session     │
Rename: ↑↓ move · ↵ choose · 1-9/a-z
or click

───────────────────────────────────────
Esc:dismiss  Q:close
"
`;

exports[`ToastOverlayView actions keeps a wrapped prompt and notice in disjoint structural regions through resize 2`] = `
"  │ need…[copy][x] │
FL│ Worktrunk      │
──│ failed to      │─
  │ remove the     │…
Rename: ↑↓ move · ↵

─────────────────────
Esc:dismiss  Q:close
"
`;

exports[`ToastOverlayView actions keeps a wrapped prompt and notice in disjoint structural regions through resize 3`] = `
"  │ need…[copy][x] │
FL│ diagnostic dia │
Rename: ↑↓ move · ↵
─────────────────────
Esc:dismiss  Q:close
"
`;
